@@ -1,0 +1,21 @@
+<?php
+/**
+ * File containing the ezcSystemInfoException class
+ *
+ * @package SystemInformation
+ * @version //autogen//
+ * @copyright Copyright (C) 2005-2009 eZ Systems AS. All rights reserved.
+ * @license http://ez.no/licenses/new_bsd New BSD License
+ */
+
+/**
+ * This class provides an exception container for use with the SystemInformation
+ * component.
+ *
+ * @package SystemInformation
+ * @version //autogen//
+ */
+abstract class ezcSystemInfoException extends ezcBaseException
+{
+}
+?>
